--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "copy-of-household-finance-tracker",
+  "name": "household-finance-tracker",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,10 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "18.2.0",
-    "react-router-dom": "6.22.3",
-    "recharts": "2.12.2",
-    "react-dom": "18.2.0"
+    "react": "^19.1.1",
+    "react-router-dom": "^7.7.1",
+    "recharts": "^3.1.0",
+    "react-dom": "^19.1.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
