--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
       # 3. Reactアプリの依存関係をインストールし、ビルド
       - name: Install and Build
         run: |
-          cd C:\Users\Shun\Desktop\Firebase\deploy\frontend\build\frontend
+          cd build\frontend
           npm ci
           npm run build
 
