--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,13 +10,19 @@
   },
   "dependencies": {
     "@google/genai": "^1.13.0",
+    "@google/generative-ai": "^0.24.1",
+    "firebase": "^12.1.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^7.7.1",
-    "recharts": "^3.1.0"
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.8.0",
+    "recharts": "^3.1.2"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.0.0",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
